--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -22,6 +22,7 @@
     "embla-carousel-vue": "^8.0.0",
     "lucide-vue-next": "^0.358.0",
     "nuxt": "^3.10.3",
+    "nuxt-highcharts": "^3.1.1",
     "pinia": "^2.1.7",
     "radix-vue": "^1.5.2",
     "tailwind-merge": "^2.2.1",
