--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -20,6 +20,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel": "^8.0.0",
     "embla-carousel-vue": "^8.0.0",
+    "husky": "^9.0.11",
     "lucide-vue-next": "^0.358.0",
     "nuxt": "^3.10.3",
     "nuxt-highcharts": "^3.1.1",
