--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -37,8 +37,8 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@kevinmarrec/nuxt-pwa": "^0.17.0",
     "@nuxtjs/tailwindcss": "^6.11.4",
-    "@types/date-fns": "^2.6.0",
     "autoprefixer": "^10.4.18",
     "nuxt-icon": "^0.6.9",
     "postcss": "^8.4.35",
