--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -1,49 +1,49 @@
 {
-  "name": "nuxt-app",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "start": "nuxt start",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
-  },
-  "dependencies": {
-    "@internationalized/date": "3.5.2",
-    "@pinia/nuxt": "^0.5.1",
-    "@popperjs/core": "^2.11.8",
-    "@vee-validate/zod": "^4.12.6",
-    "@vueuse/core": "^10.9.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "date-fns": "^3.6.0",
-    "embla-carousel": "^8.0.0",
-    "embla-carousel-vue": "^8.0.0",
-    "husky": "^9.0.11",
-    "lucide-vue-next": "^0.358.0",
-    "nuxt": "^3.10.3",
-    "nuxt-highcharts": "^3.1.1",
-    "pinia": "^2.1.7",
-    "radix-vue": "^1.5.2",
-    "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7",
-    "v-calendar": "^3.1.2",
-    "vaul-vue": "^0.1.0",
-    "vee-validate": "^4.12.6",
-    "vue": "^3.4.21",
-    "vue-router": "^4.3.0",
-    "zod": "^3.22.4"
-  },
-  "devDependencies": {
-    "@kevinmarrec/nuxt-pwa": "^0.17.0",
-    "@nuxtjs/tailwindcss": "^6.11.4",
-    "autoprefixer": "^10.4.18",
-    "nuxt-icon": "^0.6.9",
-    "postcss": "^8.4.35",
-    "shadcn-nuxt": "^0.10.2",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.1.3"
-  }
+	"name": "nuxt-app",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"build": "nuxt build",
+		"dev": "nuxt dev",
+		"start": "nuxt start",
+		"generate": "nuxt generate",
+		"preview": "nuxt preview",
+		"postinstall": "nuxt prepare"
+	},
+	"dependencies": {
+		"@internationalized/date": "3.5.2",
+		"@pinia/nuxt": "^0.5.1",
+		"@popperjs/core": "^2.11.8",
+		"@vee-validate/zod": "^4.12.6",
+		"@vueuse/core": "^10.9.0",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.0",
+		"date-fns": "^3.6.0",
+		"embla-carousel": "^8.0.0",
+		"embla-carousel-vue": "^8.0.0",
+		"husky": "^9.0.11",
+		"lucide-vue-next": "^0.358.0",
+		"nuxt": "^3.11.1",
+		"nuxt-highcharts": "^3.1.1",
+		"pinia": "^2.1.7",
+		"radix-vue": "^1.5.2",
+		"tailwind-merge": "^2.2.1",
+		"tailwindcss-animate": "^1.0.7",
+		"v-calendar": "^3.1.2",
+		"vaul-vue": "^0.1.0",
+		"vee-validate": "^4.12.6",
+		"vue": "^3.4.21",
+		"vue-router": "^4.3.0",
+		"zod": "^3.22.4"
+	},
+	"devDependencies": {
+		"@nuxtjs/tailwindcss": "^6.11.4",
+		"@vite-pwa/nuxt": "^0.6.0",
+		"autoprefixer": "^10.4.18",
+		"nuxt-icon": "^0.6.9",
+		"postcss": "^8.4.35",
+		"shadcn-nuxt": "^0.10.2",
+		"tailwindcss": "^3.4.1",
+		"typescript": "^5.1.3"
+	}
 }
